--- a/assets/main.scss
+++ b/assets/main.scss
@@ -85,6 +85,11 @@ $github-colour: rgb(101, 109, 118);
     display: block;
 }
 
+.pdf-document {
+    width: 100%;
+    height: 600px;
+}
+
 @media only screen and (max-width: 600px) {
     .preview-thumbnail-container {
         width: 100%;
