Fixed typos in counterfeit, fixed vertical images being squished, updated github pages in gemfile

--- a/_includes/captioned-image.html
+++ b/_includes/captioned-image.html
@@ -1,6 +1,6 @@
 
 <div>
-    <img src="{{ include.src }}" alt="{{ include.alt }}">
+    <img src="{{ include.src }}" {% if include.width %}width="{{ include.width }}"{% endif %} alt="{{ include.alt }}">
     <p class="caption">
         {%- if include.caption -%}
             {{ include.caption }}
