--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 
-p, li {
+p, .post-content li {
     text-align: justify;
 }
 
@@ -63,10 +63,6 @@ $github-colour: rgb(101, 109, 118);
     color: $github-colour;
 }
 
-img {
-    width: 100%;
-}
-
 .github-bookmark img {
     margin-bottom: 7px;
     width: 200px;
@@ -120,4 +116,21 @@ img {
         max-width: 100%;
         max-height: 250px;
     }
+}
+
+// Modify the footer columns to handle my long linked-in name
+
+.footer-col-1 {
+  width: -webkit-calc(25% - (#{$spacing-unit} / 2));
+  width:         calc(25% - (#{$spacing-unit} / 2));
+}
+
+.footer-col-2 {
+  width: -webkit-calc(30% - (#{$spacing-unit} / 2));
+  width:         calc(30% - (#{$spacing-unit} / 2));
+}
+
+.footer-col-3 {
+  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
+  width:         calc(45% - (#{$spacing-unit} / 2));
 }
